# ChangeLog for net-wireless/wpa_supplicant
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.185 2012/10/05 21:16:20 gurligebis Exp $

  05 Oct 2012; <gurligebis@gentoo.org> wpa_supplicant-1.0-r1.ebuild:
  Fixing bug caused by enabling wimax, making patch fail, fixing #437240

*wpa_supplicant-1.0-r1 (04 Oct 2012)

  04 Oct 2012; <gurligebis@gentoo.org> +wpa_supplicant-1.0-r1.ebuild,
  +files/wpa_supplicant-1.0-libnl_path_fix.patch:
  Moving to depend on dev-libs/libnl:3 instead of dev-libs/libnl:1.1

  03 Oct 2012; <gurligebis@gentoo.org> wpa_supplicant-1.0.ebuild:
  Migrated to REQUIRED_USE, fixing bug #436824

  03 Jun 2012; <gurligebis@gentoo.org> wpa_supplicant-1.0.ebuild:
  Making wpa_supplicant depend on net-wireless/crda on linux, fixing bug
  #401277

  22 May 2012; <gurligebis@gentoo.org> +files/wpa_supplicant-gcc470.patch,
  wpa_supplicant-0.7.3-r5.ebuild, wpa_supplicant-1.0.ebuild:
  Fixing building with GCC 4.7, fixing bug #409285

*wpa_supplicant-1.0 (15 May 2012)

  15 May 2012; <gurligebis@gentoo.org> -wpa_supplicant-0.7.3-r2.ebuild,
  +wpa_supplicant-1.0.ebuild, +files/wpa_supplicant-1.0-dbus-path-fix.patch,
  +files/wpa_supplicant-1.0-do-not-call-dbus-functions-with-NULL-path.patch,
  +files/wpa_supplicant-1.0-generate-libeap-peer.patch:
  Bumping to 1.0, fixing bug #415503

  04 May 2012; Jeff Horelick <jdhore@gentoo.org>
  wpa_supplicant-0.7.3-r2.ebuild, wpa_supplicant-0.7.3-r5.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  10 Mar 2012; Brent Baude <ranger@gentoo.org> wpa_supplicant-0.7.3-r5.ebuild:
  Marking wpa_supplicant-0.7.3-r5 ppc for bug 386129

  09 Mar 2012; Brent Baude <ranger@gentoo.org> wpa_supplicant-0.7.3-r5.ebuild:
  Marking wpa_supplicant-0.7.3-r5 ppc64 for bug 386129

  08 Jan 2012; Markus Meier <maekke@gentoo.org> wpa_supplicant-0.7.3-r5.ebuild:
  arm stable, bug #386129

  04 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>