@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/wpa_supplicant
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.185 2012/10/05 21:16:20 gurligebis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.186 2012/10/28 09:07:49 gurligebis Exp $
+
+  28 Oct 2012; <gurligebis@gentoo.org> wpa_supplicant-1.0-r1.ebuild:
+  Removing debug USE flag (bug #439870) and making building verbose (bug
+  #438256)
 
   05 Oct 2012; <gurligebis@gentoo.org> wpa_supplicant-1.0-r1.ebuild:
   Fixing bug caused by enabling wimax, making patch fail, fixing #437240
